force-app/main/default/objects/Agent_Event__e/Agent_Event__e.object-meta.xml
<CustomObject>
    <description>Publishes Immediately as soon as:

- Agent is sent a message
- Agent responds
- Agent Action is run</description>
    <label>Agent Event</label>
    <pluralLabel>Agent Events</pluralLabel>
</CustomObject>