force-app/main/default/objects/Agent_Event__e/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <description>The ID of the agent this event corresponds to</description>
    <label>Agent Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>