force-app/main/default/objects/Agent_Event__e/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>State about this event</description>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>