force-app/main/default/objects/Agent_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The event type. See Agent.EventTypes enum</description>
    <inlineHelpText>The event type. See Agent.EventTypes enum</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>